<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_login_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_nama_lengkap"/>
        <EditText
            android:id="@+id/edit_id_pengguna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"/>
        <EditText
            android:id="@+id/edit_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_sandi"/>
        <EditText
            android:id="@+id/edit_ulang_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_ulang_sandi"/>
        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_orange"
            android:text="@string/register_btn_daftar"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_marginRight="16dp"
                android:background="#737272"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_daftar_dengan" />

            <View
                android:layout_marginLeft="16dp"
                android:background="#737272"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

        </LinearLayout>
        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10sp"-->
            <!--android:visibility="gone">-->
            <!--<View-->
                <!--android:id="@+id/space"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_margin="5sp"-->
                <!--android:layout_width="0sp"-->
                <!--android:layout_height="0sp"/>-->
            <!--<Button-->
                <!--android:id="@+id/btnLoginGoogle"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:background="@drawable/bg_btn_google"-->
                <!--android:drawableLeft="@drawable/ic_google"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:text="@string/register_google"-->
                <!--android:textColor="#000"-->
                <!--android:layout_toLeftOf="@id/space"-->
                <!--android:layout_margin="0sp"/>-->
            <!--<Button-->
                <!--android:id="@+id/btnLoginFB"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:background="@drawable/bg_blue"-->
                <!--android:drawableLeft="@drawable/ic_facebook"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:text="@string/register_facebook"-->
                <!--android:textColor="#fff"-->
                <!--android:layout_toRightOf="@id/space"-->
                <!--android:layout_margin="0sp"/>-->
        <!--</RelativeLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">
            <Button
                android:id="@+id/btnDaftarGoogle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_google"
                android:drawableLeft="@drawable/ic_google"
                android:paddingLeft="10dp"
                android:text="@string/register_google"
                android:textColor="#000"
                android:layout_marginRight="5sp"
                android:layout_marginVertical="0sp"/>
            <Button
                android:id="@+id/btnDaftarFB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_blue"
                android:drawableLeft="@drawable/ic_facebook"
                android:paddingLeft="10dp"
                android:text="@string/register_facebook"
                android:textColor="#fff"
                android:layout_marginLeft="5sp"
                android:layout_marginVertical="0sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>